--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday Ananya</title>
+    <title>Happy Birthday !!!</title>
     <meta name="description" content="A special birthday celebration for Ananya" />
     <meta name="author" content="Lovable" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
